--- a/src/ru/gurps/generator/resources/views/featureFull.fxml
+++ b/src/ru/gurps/generator/resources/views/featureFull.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.media.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="674.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="14.0" layoutY="98.0" text="Описание" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="98.0" />
       <Label fx:id="name" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="574.0" text="name" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
@@ -15,11 +13,16 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="cost" layoutX="14.0" layoutY="57.0" prefHeight="16.0" prefWidth="144.0" text="cost" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="57.0" />
-      <Label fx:id="type" alignment="CENTER_RIGHT" layoutX="563.0" layoutY="57.0" prefHeight="16.0" prefWidth="144.0" text="type" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="57.0" />
-      <TextFlow layoutY="114.0" prefHeight="399.0" prefWidth="674.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="114.0">
-         <children>
-            <Text fx:id="fullDescription" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="489.6829261779785" />
-         </children></TextFlow>
+      <Label fx:id="cost" layoutX="14.0" layoutY="57.0" prefHeight="16.0" prefWidth="144.0" text="cost" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="47.0" />
+      <Label fx:id="type" alignment="TOP_LEFT" layoutX="3.0" layoutY="82.0" prefHeight="16.0" prefWidth="144.0" text="type" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="67.0" />
+      <ScrollPane hbarPolicy="NEVER" layoutX="14.0" layoutY="117.0" prefHeight="448.0" prefWidth="607.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="117.0">
+         <content>
+            <TextFlow prefHeight="446.0" prefWidth="601.0">
+               <children>
+                  <Text fx:id="fullDescription" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="489.6829261779785" />
+               </children>
+            </TextFlow>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
