--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -72,7 +72,7 @@
                 </Tab>
                 <Tab fx:id="skillsTab" text="Умения">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                        <fx:include source="skills.fxml" />
                     </content>
                 </Tab>
                 <Tab fx:id="techniquesTab" text="Техники">
