--- a/src/ru/gurps/generator/resources/views/skillFull.fxml
+++ b/src/ru/gurps/generator/resources/views/skillFull.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.text.*?>
@@ -22,9 +23,10 @@
       <Label fx:id="parryBonus" layoutX="44.0" layoutY="87.0" prefHeight="16.0" text="Бонус парирования: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="157.0" />
       <ScrollPane hbarPolicy="NEVER" layoutX="14.0" layoutY="197.0" prefHeight="368.0" prefWidth="607.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="197.0">
          <content>
-            <TextFlow prefHeight="368.0" prefWidth="601.0">
+            <TextFlow prefHeight="368.0" prefWidth="601.0" stylesheets="@../css/main.css">
                      <children>
                         <Text fx:id="fullDescription" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="489.6829261779785" />
+                        <Text fx:id="modifiers" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="modifiers" wrappingWidth="489.6829261779785" />
                      </children>
                   </TextFlow>
          </content>
