--- a/src/ru/gurps/generator/resources/views/featureFull.fxml
+++ b/src/ru/gurps/generator/resources/views/featureFull.fxml
@@ -7,14 +7,14 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="635.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="14.0" layoutY="98.0" text="Описание" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="98.0" />
-      <Label fx:id="name" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="574.0" text="name" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+      <Label layoutX="14.0" layoutY="98.0" text="%description" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="98.0" />
+      <Label fx:id="name" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="574.0" text="%name" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="cost" layoutX="14.0" layoutY="57.0" prefHeight="16.0" prefWidth="144.0" text="cost" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="47.0" />
-      <Label fx:id="type" alignment="TOP_LEFT" layoutX="3.0" layoutY="82.0" prefHeight="16.0" prefWidth="144.0" text="type" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="67.0" />
+      <Label fx:id="cost" layoutX="14.0" layoutY="57.0" prefHeight="16.0" prefWidth="144.0" text="%cost" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="47.0" />
+      <Label fx:id="type" alignment="TOP_LEFT" layoutX="3.0" layoutY="82.0" prefHeight="16.0" prefWidth="144.0" text="%type" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="67.0" />
       <ScrollPane hbarPolicy="NEVER" layoutX="14.0" layoutY="117.0" prefHeight="448.0" prefWidth="607.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="117.0">
          <content>
             <TextFlow prefHeight="446.0" prefWidth="601.0">
