--- a/src/ru/gurps/generator/resources/views/languages.fxml
+++ b/src/ru/gurps/generator/resources/views/languages.fxml
@@ -8,22 +8,22 @@
     <children>
         <TableView fx:id="tableView" prefHeight="415.0" prefWidth="657.0" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columns>
-                <TableColumn fx:id="nameColumn" prefWidth="169.0" text="Язык" />
-                <TableColumn fx:id="spokenColumn" minWidth="0.0" prefWidth="111.0" text="Разговор" />
-                <TableColumn fx:id="writtenColumn" prefWidth="92.0" text="Письмо" />
-                <TableColumn fx:id="costColumn" prefWidth="94.0" text="Стоимость" />
-                <TableColumn fx:id="userColumn" prefWidth="92.0" text="Персонаж" />
-                <TableColumn fx:id="dbColumn" prefWidth="89.0" text="База" />
+                <TableColumn fx:id="nameColumn" prefWidth="169.0" text="%language" />
+                <TableColumn fx:id="spokenColumn" minWidth="0.0" prefWidth="111.0" text="%talk" />
+                <TableColumn fx:id="writtenColumn" prefWidth="92.0" text="%writing" />
+                <TableColumn fx:id="costColumn" prefWidth="94.0" text="%cost" />
+                <TableColumn fx:id="userColumn" prefWidth="92.0" text="%character" />
+                <TableColumn fx:id="dbColumn" prefWidth="89.0" text="%db" />
             </columns>
         </TableView>
-        <Label alignment="CENTER" layoutX="7.0" layoutY="415.0" prefHeight="16.0" prefWidth="125.0" text="Язык" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="5.0" />
+        <Label alignment="CENTER" layoutX="7.0" layoutY="415.0" prefHeight="16.0" prefWidth="125.0" text="%language" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="5.0" />
         <TextField fx:id="nameText" layoutY="431.0" prefHeight="26.0" prefWidth="124.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="5.0" />
         <ChoiceBox fx:id="spokenChoiceBox" layoutX="138.0" layoutY="431.0" prefWidth="150.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="138.0" />
-        <Label alignment="CENTER" layoutX="139.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="Разговор" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="139.0" />
+        <Label alignment="CENTER" layoutX="139.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="%talk" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="139.0" />
         <ChoiceBox fx:id="writtenChoiceBox" layoutX="299.0" layoutY="431.0" prefWidth="150.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="299.0" />
-        <Label alignment="CENTER" layoutX="300.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="Письмо" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="300.0" />
-        <Button fx:id="addButton" disable="true" layoutX="558.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Добавить" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="6.0" />
+        <Label alignment="CENTER" layoutX="300.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="%writing" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="300.0" />
+        <Button fx:id="addButton" disable="true" layoutX="558.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="%add" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="6.0" />
         <TextField fx:id="costText" layoutX="457.0" layoutY="431.0" prefHeight="26.0" prefWidth="80.0" text="0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="457.0" />
-        <Label alignment="CENTER" layoutX="457.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="Стоимость" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="457.0" />
+        <Label alignment="CENTER" layoutX="457.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="%cost" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="457.0" />
     </children>
 </AnchorPane>
