--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -67,7 +67,7 @@
                 </Tab>
                 <Tab fx:id="modesTab" text="%modifiers">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                        <fx:include source="modifiers.fxml" />
                     </content>
                 </Tab>
                 <Tab fx:id="skillsTab" text="%skills">
