--- a/src/ru/gurps/generator/resources/views/modifiers.fxml
+++ b/src/ru/gurps/generator/resources/views/modifiers.fxml
@@ -37,21 +37,21 @@
         <!-- bottomMenu -->
         <AnchorPane fx:id="bottomMenu" layoutY="300.0" prefHeight="134.0" prefWidth="645.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
-                <ComboBox fx:id="levelComboBox" layoutX="323.0" layoutY="27.0" value="1.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="182.0" />
-                <Label layoutX="422.0" layoutY="29.0" text="%level" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="208.0" />
-            <Label fx:id="levelLabel" alignment="CENTER" prefHeight="25.0" prefWidth="62.0" text="Label" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="184.0" />
-                <TextField fx:id="levelText" layoutX="424.0" layoutY="49.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="184.0" />
+                <ComboBox fx:id="levelComboBox" layoutX="323.0" layoutY="27.0" prefHeight="26.0" prefWidth="62.0" value="1.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="224.0" />
+                <Label alignment="CENTER" layoutX="422.0" layoutY="29.0" prefHeight="16.0" prefWidth="62.0" text="%level" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="224.0" />
+            <Label fx:id="levelLabel" alignment="CENTER" prefHeight="25.0" prefWidth="62.0" text="Label" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="224.0" />
+                <TextField fx:id="levelText" layoutX="424.0" layoutY="49.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="224.0" />
                 <Button fx:id="add" disable="true" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="%add" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
                 <Button fx:id="remove" layoutX="541.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="%remove" visible="false" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
                 <Button fx:id="full" layoutX="550.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="%full" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="10.0" />
-                <Label layoutX="504.0" layoutY="29.0" text="%cost" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="127.0" />
+                <Label alignment="CENTER" layoutX="504.0" layoutY="29.0" prefHeight="16.0" prefWidth="72.0" text="%cost" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="116.0" />
                 <Label fx:id="finalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" text="-" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
-                <TextField fx:id="finalCostText" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
+                <TextField fx:id="finalCostText" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="72.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
 
-                <TableView fx:id="featuresTableView" layoutX="-2.0" prefHeight="134.0" prefWidth="388.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="257.0" AnchorPane.topAnchor="0.0">
+                <TableView fx:id="featuresTableView" layoutX="-2.0" prefHeight="134.0" prefWidth="338.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="332.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                        <TableColumn fx:id="titleColumn" prefWidth="141.0" text="%name" />
-                        <TableColumn fx:id="titleEnColumn" prefWidth="170.0" text="%name_en" />
+                        <TableColumn fx:id="titleColumn" prefWidth="176.0" text="%name" />
+                        <TableColumn fx:id="titleEnColumn" prefWidth="161.0" text="%name_en" />
                     </columns>
                 </TableView>
             </children>
