--- a/src/ru/gurps/generator/resources/views/skillSpecialization.fxml
+++ b/src/ru/gurps/generator/resources/views/skillSpecialization.fxml
@@ -13,9 +13,9 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="24.0" layoutY="67.0" prefHeight="16.0" prefWidth="117.0" text="%two_hands: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="504.0" AnchorPane.topAnchor="77.0" />
-      <Label layoutX="34.0" layoutY="77.0" prefHeight="16.0" prefWidth="80.0" text="%cost: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="541.0" AnchorPane.topAnchor="97.0" />
-      <Label layoutX="44.0" layoutY="87.0" prefHeight="16.0" prefWidth="61.0" text="%level: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="560.0" AnchorPane.topAnchor="117.0" />
+      <Label layoutX="24.0" layoutY="67.0" prefHeight="16.0" prefWidth="117.0" text="%two_hands_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="504.0" AnchorPane.topAnchor="77.0" />
+      <Label layoutX="34.0" layoutY="77.0" prefHeight="16.0" prefWidth="80.0" text="%cost_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="541.0" AnchorPane.topAnchor="97.0" />
+      <Label layoutX="44.0" layoutY="87.0" prefHeight="16.0" prefWidth="61.0" text="%level_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="560.0" AnchorPane.topAnchor="117.0" />
       <ScrollPane hbarPolicy="NEVER" layoutX="14.0" layoutY="353.0" prefHeight="212.0" prefWidth="607.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="353.0">
          <content>
             <TextFlow prefHeight="213.0" prefWidth="601.0" stylesheets="@../css/main.css">
@@ -26,8 +26,8 @@
                   </TextFlow>
          </content>
       </ScrollPane>
-      <Label layoutX="24.0" layoutY="67.0" prefHeight="16.0" prefWidth="102.0" text="%default: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="519.0" AnchorPane.topAnchor="37.0" />
-      <Label layoutX="34.0" layoutY="77.0" prefHeight="16.0" prefWidth="86.0" text="%demands: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="535.0" AnchorPane.topAnchor="57.0" />
+      <Label layoutX="24.0" layoutY="67.0" prefHeight="16.0" prefWidth="102.0" text="%default_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="519.0" AnchorPane.topAnchor="37.0" />
+      <Label layoutX="34.0" layoutY="77.0" prefHeight="16.0" prefWidth="86.0" text="%demands_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="535.0" AnchorPane.topAnchor="57.0" />
       <TableView fx:id="tableView" layoutX="6.0" layoutY="144.0" prefHeight="191.0" prefWidth="623.0" tableMenuButtonVisible="true" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="6.0">
          <columns>
             <TableColumn fx:id="nameColumn" prefWidth="136.0" text="%name" />
