--- a/src/ru/gurps/generator/resources/views/spellFull.fxml
+++ b/src/ru/gurps/generator/resources/views/spellFull.fxml
@@ -15,15 +15,15 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="cost" layoutX="14.0" layoutY="57.0" prefHeight="16.0" text="%cost: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="57.0" />
-      <Label fx:id="type" layoutX="14.0" layoutY="159.0" prefHeight="16.0" text="%type: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="157.0" />
-      <Label fx:id="school" layoutX="14.0" layoutY="41.0" prefHeight="16.0" text="%school: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="37.0" />
-      <Label fx:id="complexity" layoutX="14.0" layoutY="133.0" prefHeight="16.0" text="%complexity: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="137.0" />
-      <Label fx:id="needTime" layoutX="24.0" layoutY="67.0" prefHeight="16.0" text="%need_time: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="77.0" />
-      <Label fx:id="duration" layoutX="14.0" layoutY="173.0" prefHeight="16.0" text="%duration: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="177.0" />
-      <Label fx:id="maintainingCost" layoutX="34.0" layoutY="77.0" prefHeight="16.0" text="%maintaining_cost: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="97.0" />
-      <Label fx:id="thing" layoutX="44.0" layoutY="87.0" prefHeight="16.0" text="%thing: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="117.0" />
-      <Label fx:id="demands" layoutX="-5.0" layoutY="220.0" prefHeight="16.0" text="%demands: " AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="217.0" />
+      <Label fx:id="cost" layoutX="14.0" layoutY="57.0" prefHeight="16.0" text="%cost_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="57.0" />
+      <Label fx:id="type" layoutX="14.0" layoutY="159.0" prefHeight="16.0" text="%type_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="157.0" />
+      <Label fx:id="school" layoutX="14.0" layoutY="41.0" prefHeight="16.0" text="%school_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="37.0" />
+      <Label fx:id="complexity" layoutX="14.0" layoutY="133.0" prefHeight="16.0" text="%complexity_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="137.0" />
+      <Label fx:id="needTime" layoutX="24.0" layoutY="67.0" prefHeight="16.0" text="%need_time_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="77.0" />
+      <Label fx:id="duration" layoutX="14.0" layoutY="173.0" prefHeight="16.0" text="%duration_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="177.0" />
+      <Label fx:id="maintainingCost" layoutX="34.0" layoutY="77.0" prefHeight="16.0" text="%maintaining_cost_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="97.0" />
+      <Label fx:id="thing" layoutX="44.0" layoutY="87.0" prefHeight="16.0" text="%thing_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="117.0" />
+      <Label fx:id="demands" layoutX="-5.0" layoutY="220.0" prefHeight="16.0" text="%demands_colon" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="217.0" />
       <Label fx:id="createCost" layoutX="14.0" layoutY="204.0" prefHeight="16.0" text="%create_cost: " wrapText="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="197.0" />
       <ScrollPane hbarPolicy="NEVER" layoutX="14.0" layoutY="252.0" prefHeight="313.0" prefWidth="607.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="252.0">
          <content>
