--- a/src/ru/gurps/generator/resources/views/selectUser.fxml
+++ b/src/ru/gurps/generator/resources/views/selectUser.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -20,5 +22,6 @@
       <Button fx:id="load" disable="true" layoutX="299.0" layoutY="227.0" mnemonicParsing="false" text="%download" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="14.0" />
       <Button fx:id="remove" disable="true" layoutX="14.0" layoutY="227.0" mnemonicParsing="false" text="%remove" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="14.0" />
       <Button fx:id="generate" layoutX="141.0" layoutY="250.0" mnemonicParsing="false" text="%generate" AnchorPane.bottomAnchor="7.0" />
+      <Hyperlink fx:id="lastVersionLink" alignment="CENTER" focusTraversable="false" layoutX="192.0" layoutY="85.0" text="%link_to_last_version" underline="true" visible="false" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="85.0" />
    </children>
 </AnchorPane>
